--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Stormy</string>
+    <string name="error_title">Oops! Sorry.</string>
+    <string name="error_message">There was an error. Please try again.</string>
+    <string name="error_button_ok_text">Ok</string>
 </resources>
