--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="error_title">Oops! Sorry.</string>
     <string name="error_message">There was an error. Please try again.</string>
     <string name="error_button_ok_text">Ok</string>
+    <string name="network_unavailable_message">Sorry, the network is unavailable</string>
 </resources>
