--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="error_message">There was an error. Please try again.</string>
     <string name="error_button_ok_text">Ok</string>
     <string name="network_unavailable_message">Sorry, the network is unavailable</string>
+    <string name="dark_sky_message">"<a href= "https://darksky.net/poweredby">Powered by Dark Sky</a></string>
+
 </resources>
