pulling data, not updating

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,12 @@
     <string name="error_button_ok_text">Ok</string>
     <string name="network_unavailable_message">Sorry, the network is unavailable</string>
     <string name="dark_sky_message">"<a href= "https://darksky.net/poweredby">Powered by Dark Sky</a></string>
+    <string name="precip_percentage">70%</string>
+    <string name="precip_label_name">RAIN/SNOW?</string>
+    <string name="humidity_level">0.88</string>
+    <string name="humidity_label">HUMIDITY</string>
+    <string name="location">Louisville, KY</string>
+    <string name="time_value_number">At 5:00 PM it will be</string>
+    <string name="temperature_value">100</string>
 
 </resources>
